--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.stlawu.final_project">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,10 +19,12 @@
         </activity>
         <activity
             android:name=".GameActivity"
-
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".signupActivity"></activity>
-        <activity android:name=".HighScoreActivity"></activity>
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".signupActivity">
+        </activity>
+        <activity android:name=".HighScoreActivity">
+        </activity>
 
     </application>
 
