added a scoreboard activity and now has realtime update and data retrival

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         </activity>
         <activity android:name=".signupActivity">
         </activity>
-        <activity android:name=".HighScoreActivity">
+        <activity
+            android:name=".HighScoreActivity"
+            android:screenOrientation="portrait">
         </activity>
 
     </application>
